NETPOL/hosts-GlobalNetworkPolicies/NetPol_MasterNodes_Ingress_Auto.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: gnp-masternodes.ingress
spec:
  selector: has(node-role.kubernetes.io/master)
   # This rule allows ingress to the Kubernetes API server.
  ingress:
  - action: Allow
    protocol: TCP
    source:
       nets:
         # Kubernetes cluster subnet 
         - '10.13.4.0/24'
         # Management workstation
         - '10.13.3.2/32'
    destination:
       # APIserver
       ports: [6443]
   # This rule allows all traffic to localhost.
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
   # This rule is required in multi-master clusters where etcd pods are colocated with the masters.
   # Allow the etcd pods on the masters to communicate with each other. 2380 is the etcd peer port.
   # This rule also allows the masters to access the kubelet API on other masters (including itself).
  - action: Allow
    protocol: TCP
    source:
      selector: has(node-role.kubernetes.io/master)
    destination:
      ports:
      - 2380
      - 10250
